--- a/src/pages/experiencias.astro
+++ b/src/pages/experiencias.astro
@@ -3,18 +3,17 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-  <div class="max-w-3xl mx-auto">
+  <div class="max-w-3xl mx-auto h-screen">
     <h1 class="text-3xl font-bold mb-8">Mis Experiencias</h1>
     
     <div class="space-y-8">
       <div class="bg-white p-6 rounded-lg shadow-md">
         <h2 class="text-xl font-semibold mb-2">Desarrollador Web - Bienes Raices</h2>
         <p class="text-gray-600 mb-2">Enero 2022 - Presente</p>
-        <p class="mb-4">Desarrollo de aplicaciones web utilizando php, Node.js y bases de datos SQL. Implementación de diseños responsivos y optimización del rendimiento para una web de bienes Raices.</p>
+        <p class="mb-4">Desarrollo de aplicaciones web utilizando php y bases de datos SQL. Implementación de diseños responsivos y optimización del rendimiento para una web de bienes Raices.</p>
         <div class="flex flex-wrap gap-2">
           <span class="px-2 py-1 bg-blue-100 text-blue-800 rounded-md text-sm">PHP</span>
-          <span class="px-2 py-1 bg-blue-100 text-blue-800 rounded-md text-sm">Node.js</span>
-          <span class="px-2 py-1 bg-blue-100 text-blue-800 rounded-md text-sm">SQL</span>
+          <span class="px-2 py-1 bg-blue-100 text-blue-800 rounded-md text-sm">MySQL</span>
         </div>
       </div>
 
@@ -35,8 +34,7 @@ import Layout from "../layouts/Layout.astro";
         <p class="mb-4">Desarrollo de una aplicación Todo List para la gestion de tareas</p>
         <div class="flex flex-wrap gap-2">
           <span class="px-2 py-1 bg-blue-100 text-blue-800 rounded-md text-sm">PHP</span>
-          <span class="px-2 py-1 bg-blue-100 text-blue-800 rounded-md text-sm">Node.js</span>
-          <span class="px-2 py-1 bg-blue-100 text-blue-800 rounded-md text-sm">SQL</span>
+          <span class="px-2 py-1 bg-blue-100 text-blue-800 rounded-md text-sm">MySQL</span>
         </div>
       </div>
     </div>
