--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 <Layout>
-  <section class="max-w-2xl">
+  <section class="max-w-2xl h-screen mx-auto">
     <h1 class="text-3xl font-bold mb-4">Contacto</h1>
     <form class="space-y-4">
       <div>
