--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import MainLayout from '../layouts/Layout.astro';
 ---
 
 <MainLayout title="Página de inicio">
+  <div class="container h-screen">
   <section class="flex flex-col md:flex-row items-center mb-12">
     <div class="md:w-1/2 md:pr-8">
       <h1 class="text-4xl font-bold mb-4">Hola, soy Leonardo</h1>
@@ -29,31 +30,32 @@ import MainLayout from '../layouts/Layout.astro';
     <h2 class="text-3xl font-bold mb-6">Proyectos Destacados</h2>
     <div class="grid gap-6 md:grid-cols-3">
       <div class="bg-white rounded-lg overflow-hidden shadow-md">
-        <img src="https://via.placeholder.com/400x200.png?text=Proyecto+1" alt="Proyecto 1" class="w-full h-48 object-cover" />
+        <img src="/public/BR.png" alt="Proyecto 1" class="w-full h-48 object-cover" />
         <div class="p-6">
-          <h3 class="text-xl font-semibold mb-2">E-commerce</h3>
-          <p class="text-gray-700 mb-4">Plataforma de compras online con React y Node.js</p>
+          <h3 class="text-xl font-semibold mb-2">E-commerce - BienesRaices</h3>
+          <p class="text-gray-700 mb-4">Plataforma de compras online con PHP y MySQL</p>
           <a href="#" class="text-blue-600 hover:underline">Ver detalles →</a>
         </div>
       </div>
       
       <div class="bg-white rounded-lg overflow-hidden shadow-md">
-        <img src="https://via.placeholder.com/400x200.png?text=Proyecto+2" alt="Proyecto 2" class="w-full h-48 object-cover" />
+        <img src="/public/CF.png" alt="Proyecto 2" class="w-full h-48 object-cover" />
         <div class="p-6">
-          <h3 class="text-xl font-semibold mb-2">App de Tareas</h3>
-          <p class="text-gray-700 mb-4">Aplicación para gestionar tareas diarias con Vue.js</p>
+          <h3 class="text-xl font-semibold mb-2">Blog Cafe</h3>
+          <p class="text-gray-700 mb-4">Un blog web para vender cursos sobre cafes</p>
           <a href="#" class="text-blue-600 hover:underline">Ver detalles →</a>
         </div>
       </div>
       
       <div class="bg-white rounded-lg overflow-hidden shadow-md">
-        <img src="https://via.placeholder.com/400x200.png?text=Proyecto+3" alt="Proyecto 3" class="w-full h-48 object-cover" />
+        <img src="/public/TL.png" alt="Proyecto 3" class="w-full h-48 object-cover" />
         <div class="p-6">
-          <h3 class="text-xl font-semibold mb-2">Blog Personal</h3>
-          <p class="text-gray-700 mb-4">Blog creado con Astro y Markdown</p>
+          <h3 class="text-xl font-semibold mb-2">ToDo List</h3>
+          <p class="text-gray-700 mb-4">Aplicacion web para la gestion de</p>
           <a href="#" class="text-blue-600 hover:underline">Ver detalles →</a>
         </div>
       </div>
     </div>
   </section>
+</div>
 </MainLayout>
